renew style for index.html and fix bug my_bus_stops.py 93 line

--- a/home_page/index.html
+++ b/home_page/index.html
@@ -4,12 +4,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--	<meta http-equiv="refresh" content="5; URL=https://t.me/bustime_ge_bot" />-->
+	<meta http-equiv="refresh" content="5; URL=https://t.me/bustime_ge_bot" />
 	<title>Redirecting</title>
 	<link rel="stylesheet" href="css/main.css">
 	<script src="js/app.js" defer></script>
 	<script src="libs/rain.js" defer></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
 
@@ -25,6 +24,7 @@
 						<span>You will be redirected to BusTime in 5 seconds</span>
 					</h1>
 					<div class="hero-content__p">If this doesn't happen,</div>
+					<svg id="sineWave" width="100%" height="50px"></svg>
 					<a href="https://t.me/bustime_ge_bot" class="button-start">Click here</a>
 				</div>
 			</div>
